--- a/styles/css.css
+++ b/styles/css.css
@@ -84,8 +84,8 @@ h4{
 }
 #SOS{
   position: fixed;
-  right: 1rem;
-  bottom: 10vh;
+  left: 10px;
+  bottom: 10px;
 
 }
 #dialog-div{
@@ -121,7 +121,4 @@ display: flex;
  flex-direction: row;
  flex-wrap: wrap;
 }
-}
-p{
-  font-size: medium;
 }
