--- a/styles/css.css
+++ b/styles/css.css
@@ -11,7 +11,7 @@
 
 .btn-purple:hover {
   color: #fff;
-  background-color: #a1f0dd;
+  background-color: #2065ce;
   border-color: #000000;
 }
 
@@ -25,7 +25,7 @@ main {
   background-size: cover;
 }
 .divHTML{
-  color: #000000;
+  color: #ffffff;
   margin:5vh 0 ;
   background-color:#1a2c96;
   border-radius: 10px 10px 10px 10px;
@@ -80,3 +80,13 @@ body,
 }
 
 
+#nav{
+  height: 10vh;
+  position: fixed;
+  width: 100vw;
+  bottom: 0;
+
+}
+main{
+  padding-bottom: 10vh;
+}
